--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 *{
     padding:0px;
     margin:0px;
-    font-family:'poppins',sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size:15px;
     box-sizing:border-box;
 }
 body{
@@ -16,4 +17,36 @@ body{
     border-radius:20px;
     padding:40px 35px;
     text-align:center;
+}
+.search{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.search input{
+    border:0;
+    outline:0;
+    background:#ebfffc;
+    color:#555;
+    padding:10px 25px;
+    height:60px;
+    border-radius:30px;
+    flex:1;
+    margin-right:16px;
+    font-size:20px;
+    text-align:center;
+    
+}
+.search button{
+    border:0;
+    outline:0;
+    background:#ebfffc;
+    border-radius:50%;
+    width:60px;
+    height:60px;
+    cursor:pointer;
+}
+.search button img{
+    width:16px;
 }
