--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body{
     flex:1;
     margin-right:16px;
     font-size:20px;
-    text-align:center;
+    text-align:left;
     
 }
 .search button{
@@ -82,4 +82,14 @@ body{
 .humidity ,.wind{
     font-size:28px;
     margin-top:-6px;
+}
+.weather{
+    display:none;
+}
+.error{
+    text-align:left;
+    margin-left:10px;
+    font-size:20px;
+    margin-top:10px;
+    display:none;
 }
