--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
 .search{
     width: 100%;
     display: flex;
-    align-items: center;
+    align-items:center;
     justify-content: space-between;
 }
 .search input{
@@ -92,4 +92,12 @@ body{
     font-size:20px;
     margin-top:10px;
     display:none;
+}
+@media screen and (min-width:360px){
+    .search{
+        width:100%;
+    }
+    .search input{
+        width:30%;
+    }
 }
